--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@stomp/stompjs": "^7.1.1",
     "@vueuse/core": "^13.1.0",
     "axios": "^1.8.4",
+    "echarts": "^5.6.0",
     "element-plus": "^2.9.8",
     "nprogress": "^0.2.0",
     "path-browserify": "^1.0.1",
